// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/Color Backgrounds 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f9f9f9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --background-color-primary
      </span>
      <span
        className="label"
      >
        #f9f9f9
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fcfdfd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --background-color-primary-highlight
      </span>
      <span
        className="label"
      >
        #fcfdfd
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Base 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#000",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-base-black
      </span>
      <span
        className="label"
      >
        #000
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-base-white
      </span>
      <span
        className="label"
      >
        #fff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-base-transparent
      </span>
      <span
        className="label"
      >
        transparent
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Blue 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ebf8ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-blue-100
      </span>
      <span
        className="label"
      >
        #ebf8ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#bee3f8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-blue-200
      </span>
      <span
        className="label"
      >
        #bee3f8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#90cdf4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-blue-300
      </span>
      <span
        className="label"
      >
        #90cdf4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#63b3ed",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-blue-400
      </span>
      <span
        className="label"
      >
        #63b3ed
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4299e1",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-blue-500
      </span>
      <span
        className="label"
      >
        #4299e1
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#3182ce",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-blue-600
      </span>
      <span
        className="label"
      >
        #3182ce
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2b6cb0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-blue-700
      </span>
      <span
        className="label"
      >
        #2b6cb0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2c5282",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-blue-800
      </span>
      <span
        className="label"
      >
        #2c5282
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2a4365",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-blue-900
      </span>
      <span
        className="label"
      >
        #2a4365
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Brand 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#272631",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-blue-dark
      </span>
      <span
        className="label"
      >
        #272631
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#3B3670",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-blue-marines
      </span>
      <span
        className="label"
      >
        #3B3670
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9793BD",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-gray-blue
      </span>
      <span
        className="label"
      >
        #9793BD
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7F74F2",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-aqua-marine
      </span>
      <span
        className="label"
      >
        #7F74F2
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#BFBBF0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-blue-light
      </span>
      <span
        className="label"
      >
        #BFBBF0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#272631",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-blue-marine
      </span>
      <span
        className="label"
      >
        #272631
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#EB610C",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-orange
      </span>
      <span
        className="label"
      >
        #EB610C
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#923E0C",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-orange-dark
      </span>
      <span
        className="label"
      >
        #923E0C
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#6B17AD",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-violet
      </span>
      <span
        className="label"
      >
        #6B17AD
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#E6D1FA",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-white-violet
      </span>
      <span
        className="label"
      >
        #E6D1FA
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#EBEBEB",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-gray
      </span>
      <span
        className="label"
      >
        #EBEBEB
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ABABAB",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-gray-lith
      </span>
      <span
        className="label"
      >
        #ABABAB
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#595959",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-gray-dark
      </span>
      <span
        className="label"
      >
        #595959
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7559d1",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-slate-blue
      </span>
      <span
        className="label"
      >
        #7559d1
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9879e9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-medium-purple
      </span>
      <span
        className="label"
      >
        #9879e9
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eff1fd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-blue-moon
      </span>
      <span
        className="label"
      >
        #eff1fd
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eb2d52",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-amaranth
      </span>
      <span
        className="label"
      >
        #eb2d52
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eb4e58",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-mandy
      </span>
      <span
        className="label"
      >
        #eb4e58
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#455970",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-east-bay
      </span>
      <span
        className="label"
      >
        #455970
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7e858c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-regent-gray
      </span>
      <span
        className="label"
      >
        #7e858c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b7b7b7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-loblolly
      </span>
      <span
        className="label"
      >
        #b7b7b7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e8e8e8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-white-lilac
      </span>
      <span
        className="label"
      >
        #e8e8e8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f9f9f9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-hint-of-red
      </span>
      <span
        className="label"
      >
        #f9f9f9
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fcfdfd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-romance
      </span>
      <span
        className="label"
      >
        #fcfdfd
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#6B17AD",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-purple-heart
      </span>
      <span
        className="label"
      >
        #6B17AD
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#E8CFFC",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-mauve
      </span>
      <span
        className="label"
      >
        #E8CFFC
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#A20B29",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-maroon
      </span>
      <span
        className="label"
      >
        #A20B29
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#6B17AD",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-primary
      </span>
      <span
        className="label"
      >
        #6B17AD
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Gray 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f7fafc",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-gray-100
      </span>
      <span
        className="label"
      >
        #f7fafc
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#edf2f7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-gray-200
      </span>
      <span
        className="label"
      >
        #edf2f7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e2e8f0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-gray-300
      </span>
      <span
        className="label"
      >
        #e2e8f0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#cbd5e0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-gray-400
      </span>
      <span
        className="label"
      >
        #cbd5e0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a0aec0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-gray-500
      </span>
      <span
        className="label"
      >
        #a0aec0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#718096",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-gray-600
      </span>
      <span
        className="label"
      >
        #718096
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4a5568",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-gray-700
      </span>
      <span
        className="label"
      >
        #4a5568
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2d3748",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-gray-800
      </span>
      <span
        className="label"
      >
        #2d3748
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#1a202c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-gray-900
      </span>
      <span
        className="label"
      >
        #1a202c
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Green 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f0fff4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-green-100
      </span>
      <span
        className="label"
      >
        #f0fff4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c6f6d5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-green-200
      </span>
      <span
        className="label"
      >
        #c6f6d5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9ae6b4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-green-300
      </span>
      <span
        className="label"
      >
        #9ae6b4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#68d391",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-green-400
      </span>
      <span
        className="label"
      >
        #68d391
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#48bb78",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-green-500
      </span>
      <span
        className="label"
      >
        #48bb78
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#38a169",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-green-600
      </span>
      <span
        className="label"
      >
        #38a169
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2f855a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-green-700
      </span>
      <span
        className="label"
      >
        #2f855a
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#276749",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-green-800
      </span>
      <span
        className="label"
      >
        #276749
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#22543d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-green-900
      </span>
      <span
        className="label"
      >
        #22543d
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Indigo 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ebf4ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-indigo-100
      </span>
      <span
        className="label"
      >
        #ebf4ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c3dafe",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-indigo-200
      </span>
      <span
        className="label"
      >
        #c3dafe
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a3bffa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-indigo-300
      </span>
      <span
        className="label"
      >
        #a3bffa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7f9cf5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-indigo-400
      </span>
      <span
        className="label"
      >
        #7f9cf5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#667eea",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-indigo-500
      </span>
      <span
        className="label"
      >
        #667eea
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#5a67d8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-indigo-600
      </span>
      <span
        className="label"
      >
        #5a67d8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4c51bf",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-indigo-700
      </span>
      <span
        className="label"
      >
        #4c51bf
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#434190",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-indigo-800
      </span>
      <span
        className="label"
      >
        #434190
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#3c366b",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-indigo-900
      </span>
      <span
        className="label"
      >
        #3c366b
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Orange 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fffaf0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-orange-100
      </span>
      <span
        className="label"
      >
        #fffaf0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#feebc8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-orange-200
      </span>
      <span
        className="label"
      >
        #feebc8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fbd38d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-orange-300
      </span>
      <span
        className="label"
      >
        #fbd38d
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f6ad55",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-orange-400
      </span>
      <span
        className="label"
      >
        #f6ad55
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ed8936",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-orange-500
      </span>
      <span
        className="label"
      >
        #ed8936
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#dd6b20",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-orange-600
      </span>
      <span
        className="label"
      >
        #dd6b20
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c05621",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-orange-700
      </span>
      <span
        className="label"
      >
        #c05621
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9c4221",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-orange-800
      </span>
      <span
        className="label"
      >
        #9c4221
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7b341e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-orange-900
      </span>
      <span
        className="label"
      >
        #7b341e
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Pink 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff5f7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-pink-100
      </span>
      <span
        className="label"
      >
        #fff5f7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fed7e2",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-pink-200
      </span>
      <span
        className="label"
      >
        #fed7e2
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fbb6ce",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-pink-300
      </span>
      <span
        className="label"
      >
        #fbb6ce
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f687b3",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-pink-400
      </span>
      <span
        className="label"
      >
        #f687b3
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ed64a6",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-pink-500
      </span>
      <span
        className="label"
      >
        #ed64a6
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#d53f8c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-pink-600
      </span>
      <span
        className="label"
      >
        #d53f8c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b83280",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-pink-700
      </span>
      <span
        className="label"
      >
        #b83280
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#97266d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-pink-800
      </span>
      <span
        className="label"
      >
        #97266d
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#702459",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-pink-900
      </span>
      <span
        className="label"
      >
        #702459
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Purple 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#faf5ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-purple-100
      </span>
      <span
        className="label"
      >
        #faf5ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e9d8fd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-purple-200
      </span>
      <span
        className="label"
      >
        #e9d8fd
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#d6bcfa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-purple-300
      </span>
      <span
        className="label"
      >
        #d6bcfa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b794f4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-purple-400
      </span>
      <span
        className="label"
      >
        #b794f4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9f7aea",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-purple-500
      </span>
      <span
        className="label"
      >
        #9f7aea
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#805ad5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-purple-600
      </span>
      <span
        className="label"
      >
        #805ad5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#6b46c1",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-purple-700
      </span>
      <span
        className="label"
      >
        #6b46c1
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#553c9a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-purple-800
      </span>
      <span
        className="label"
      >
        #553c9a
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#44337a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-purple-900
      </span>
      <span
        className="label"
      >
        #44337a
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Red 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff5f5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-red-100
      </span>
      <span
        className="label"
      >
        #fff5f5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fed7d7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-red-200
      </span>
      <span
        className="label"
      >
        #fed7d7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#feb2b2",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-red-300
      </span>
      <span
        className="label"
      >
        #feb2b2
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fc8181",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-red-400
      </span>
      <span
        className="label"
      >
        #fc8181
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f56565",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-red-500
      </span>
      <span
        className="label"
      >
        #f56565
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e53e3e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-red-600
      </span>
      <span
        className="label"
      >
        #e53e3e
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c53030",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-red-700
      </span>
      <span
        className="label"
      >
        #c53030
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9b2c2c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-red-800
      </span>
      <span
        className="label"
      >
        #9b2c2c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#742a2a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-red-900
      </span>
      <span
        className="label"
      >
        #742a2a
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Teal 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e6fffa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-teal-100
      </span>
      <span
        className="label"
      >
        #e6fffa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b2f5ea",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-teal-200
      </span>
      <span
        className="label"
      >
        #b2f5ea
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#81e6d9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-teal-300
      </span>
      <span
        className="label"
      >
        #81e6d9
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4fd1c5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-teal-400
      </span>
      <span
        className="label"
      >
        #4fd1c5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#38b2ac",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-teal-500
      </span>
      <span
        className="label"
      >
        #38b2ac
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#319795",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-teal-600
      </span>
      <span
        className="label"
      >
        #319795
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2c7a7b",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-teal-700
      </span>
      <span
        className="label"
      >
        #2c7a7b
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#285e61",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-teal-800
      </span>
      <span
        className="label"
      >
        #285e61
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#234e52",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-teal-900
      </span>
      <span
        className="label"
      >
        #234e52
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Yellow 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fffff0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-yellow-100
      </span>
      <span
        className="label"
      >
        #fffff0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fefcbf",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-yellow-200
      </span>
      <span
        className="label"
      >
        #fefcbf
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#faf089",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-yellow-300
      </span>
      <span
        className="label"
      >
        #faf089
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f6e05e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-yellow-400
      </span>
      <span
        className="label"
      >
        #f6e05e
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ecc94b",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-yellow-500
      </span>
      <span
        className="label"
      >
        #ecc94b
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#d69e2e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-yellow-600
      </span>
      <span
        className="label"
      >
        #d69e2e
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b7791f",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-yellow-700
      </span>
      <span
        className="label"
      >
        #b7791f
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#975a16",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-yellow-800
      </span>
      <span
        className="label"
      >
        #975a16
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#744210",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-yellow-900
      </span>
      <span
        className="label"
      >
        #744210
      </span>
    </div>
  </div>
</div>
`;
